--- a/style/main.css
+++ b/style/main.css
@@ -65,11 +65,11 @@ a {
 }
 
 .banner-section {
-  height: 50vh;
+  height: 318px;
 }
 
 .ads-section {
-  height: 28vh;
+  height: 250px;
 }
 
 .ads-section img {
